[package]
name = "rnet"
version = "0.3.0"
edition = "2021"

[dependencies]
anyhow = "1.0.87"
bitflags = "2.6.0"
coordinate-transformer = "1.7.0"
csv = "1.3.0"
futures = "0.3.30"
geojson = "0.24.1"
hilbert_index = "0.2.0"
image = "0.25.2"
indicatif = "0.17.8"
moka = { version = "0.12.8", features = ["future"] }
polars = { version = "0.42.0", features = ["lazy"] }
polars-lazy = { version = "0.42.0", features = ["csv"] }
rayon = "1.10.0"
reqwest = "0.12.7"
rustc-hash = "2.0.0"
tokio = { version = "1.40.0", features = ["rt-multi-thread", "macros", "fs"] }
clap = { version = "4.5.17", features = ["derive"] }
spade = "2.12.1"
